Implement stack with TDD

--- a/STLwithTDD/STLwithTDD.vcxproj
+++ b/STLwithTDD/STLwithTDD.vcxproj
@@ -98,6 +98,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="stack_unittest.cpp" />
     <ClCompile Include="test.cpp" />
   </ItemGroup>
   <ItemGroup>
